--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ h1 {
 h2 {
   font-weight: bolder;
   color: blueviolet;
+  margin: 20px auto;
 }
 
 label {
@@ -32,6 +33,13 @@ select {
   border-color: blanchedalmond;
 }
 
+span {
+  font-size: small;
+  font-weight: bolder;
+  vertical-align: middle;
+  padding: 10px;
+}
+
 .container {
   max-width: 600px;
   margin: 0 auto;
@@ -43,17 +51,29 @@ select {
 .individual-city {
   background-color: cyan;
   display: flex;
-  justify-content: space-evenly;
-  padding: 25px;
+  justify-content: space-between;
+  padding: 15px;
+  margin-left: 80px;
+  margin-right: 80px;
+  border-bottom: 1px solid blue;
+  line-height: 20px;
 }
 
 .left-box {
   background-color: lightskyblue;
+  margin-left: 0px;
+  padding: 0;
+}
+
+.date {
+  font-size: 13px;
+  opacity: 0.7;
+  line-height: 0.2px;
 }
 
 .time {
   background-color: lightgreen;
-  font-size: 35px;
+  font-size: 45px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
