--- a/style.css
+++ b/style.css
@@ -4,7 +4,10 @@ body {
 }
 
 h1 {
-  margin: 0 auto;
+  display: block;
+  text-align: center;
+  margin: 30px auto;
+  color: blueviolet;
 }
 
 h2 {
@@ -18,19 +21,22 @@ label {
   text-align: center;
   font-size: 30px;
   margin: 0 auto;
-  padding: 10px;
+  padding: 5px;
+  line-height: 5px;
+  color: #006666;
 }
 
 select {
   display: block;
   text-align: center;
   font-size: 18px;
-  margin: 0 auto;
+  margin: 5px auto;
   padding: 5px;
-  width: 100%;
+  width: 72%;
   border-radius: 10px;
-  background-color: blanchedalmond;
-  border-color: blanchedalmond;
+  background-color: #009999;
+  border-color: #009999;
+  color: white;
 }
 
 span {
@@ -43,24 +49,33 @@ span {
 .container {
   max-width: 600px;
   margin: 0 auto;
-  background-color: lightcoral;
+  background: linear-gradient(
+    178deg,
+    rgb(156, 177, 248) 7.5%,
+    rgb(153, 247, 243) 93.1%
+  );
   padding: 15px;
   border-radius: 30px;
+  box-shadow: 10px 10px 5px lightgray;
 }
 
 .individual-city {
-  background-color: cyan;
+  background: linear-gradient(
+    108.1deg,
+    rgb(167, 220, 225) 11.2%,
+    rgb(217, 239, 242) 88.9%
+  );
   display: flex;
   justify-content: space-between;
   padding: 15px;
   margin-left: 80px;
   margin-right: 80px;
-  border-bottom: 1px solid blue;
+  border-bottom: 1px solid grey;
   line-height: 20px;
+  border-radius: 15px;
 }
 
 .left-box {
-  background-color: lightskyblue;
   margin-left: 0px;
   padding: 0;
 }
@@ -72,10 +87,16 @@ span {
 }
 
 .time {
-  background-color: lightgreen;
   font-size: 45px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
   align-content: center;
+}
+
+.footnote {
+  display: block;
+  text-align: center;
+  margin: 20px auto;
+  font-size: smaller;
 }
