--- a/style.css
+++ b/style.css
@@ -13,7 +13,9 @@ h1 {
 h2 {
   font-weight: bolder;
   color: blueviolet;
-  margin: 20px auto;
+  margin: 0 5px 5px 0px;
+  line-height: 45px;
+  vertical-align: middle;
 }
 
 label {
@@ -79,6 +81,7 @@ span {
   font-size: 13px;
   opacity: 0.7;
   line-height: 0.2px;
+  padding-bottom: 10px;
 }
 
 .time {
