--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ span {
   font-size: small;
   font-weight: bolder;
   vertical-align: middle;
-  padding: 10px;
+  padding: 5px;
 }
 
 a {
@@ -105,4 +105,35 @@ a:hover {
   text-align: center;
   margin: 20px auto;
   font-size: smaller;
+}
+
+@media (min-width: 300px) and (max-width: 450px) {
+  .date {
+    display: flex;
+    margin: 0 auto;
+    line-height: 15px;
+    vertical-align: middle;
+    flex-flow: column wrap;
+  }
+
+  .individual-city,
+  .span {
+    padding-right: 10px;
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+
+  .time {
+    /* flex-flow: column wrap; */
+    justify-content: flex-end;
+    align-items: center;
+    align-content: center;
+    font-size: 25px;
+  }
+
+  .span {
+    font-size: 10px;
+    padding: 1px;
+    margin: 1px auto;
+  }
 }
